         
           This is due to the code re-organisation, moving the id attribute 
           around shouldn't affect anything that isn't relying on the 
           attribute ordering (which is meant to be unimportant in HTML), and 
           allows for simplification of the unified code.

1.0.18 2008-04-20T18:54:50
        - Clean up local stuff for settings.
        - Do a little cleanup of intialisation (more needed)
        - Remove copy pasted regexes from Text::MultiMarkdown
        - Fix bug with line breaks in links - http://bugs.debian.org/459885,
          thanks to patches and test input / output provided by Adeodato Simó.
          (See t/37anchormultilinebugs.t)
        - Incorperated MDTest1.1's tests, and made most of the Text-Markdown
          and Text-MultiMarkdown tests in MDTest format.
        - Add and document an accessor for the parsed markdown URLs.
        - Fix html4tags option in Markdown.pl and MultiMarkdown.pl

1.0.19 2008-04-22T18:34:00
        - Remove auto_install from Makefile.PL, this is a deprecated feature 
          and it shouldn't be being used at all.

1.0.20 2008-05-??T??:??:??
        - Update README.txt
        - Allow scripts to be used on multiple input files at once (processing 
          in command line order)
	    - Update footnote behavior of Text::MutliMarkdown to be consistent 
	      with the latest version of MultiMarkdown
	    - Added tests for the new footnote functionality.
	    - Added tests for all the MDTest corner cases brought up on the list. 
	      Noted why / how I differ from original Markdown.
	    - Moved all the document tests to MDTest format. I have made MDTest 
	      test suites for Text::Markdown and Text::MultiMarkdown, containing 
	      **only** the bug fixes and behavior changes I've made, I've imported 
	      the Markdown test suite from MDTest1.1, and the MultiMarkdown test
	      suite.
